--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,9 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-
-    
         <title>Luke Meier (J?)</title>
         <style> 
             body {
-                font-family: 'Inconsolata', monospace;
                 background-color: #efefef;
             }
             .narrative-wrapper {
@@ -46,9 +42,12 @@
                 padding:.1em;
                 font-size: 5em;
             }
-            .description-title, .description p {
-                padding-top: 20px;
-                padding-left: 20px;
+            .description-title {
+                padding: 1em;
+                margin: 0;
+            }
+            .description p {
+                padding: 1em;
                 margin: 0;
             }
             .leadin {
@@ -75,11 +74,14 @@
                 color: black;
                 width: 100%;
             }
+            .text {
+                width: 1em;
+            }
 
         </style>
     </head>
     <body>
-
+        <span class = 'text'>LUKE MEIER J</span>
         <div class = 'narrative-wrapper'>
         </div> 
         <div class = 'description-wrapper'>
