temporarily remove description field

--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
                         .append($('<br>'));
                         
 						//Add description elements
-                        description.append($('<div class = "description"></div>')
-                            .addClass(entry['category']).attr('data-id', j)
-                            .append($('<h2 class = "description-title"></h2>')
-							.text(entry['excerpt']))
-                            .append($('<p></p>').text(entry['description'])))
+       					// description.append($('<div class = "description"></div>')
+   						//	.addClass(entry['category']).attr('data-id', j)
+   						// 	.append($('<h2 class = "description-title"></h2>')
+						// 	.text(entry['excerpt']))
+   						// 	.append($('<p></p>').text(entry['description'])))
                         j++;
                         
                     })
